--- a/src/LensFlare.css
+++ b/src/LensFlare.css
@@ -7,15 +7,17 @@
 .planet-popup {
   position: fixed;
   top: 50%;
-  left: 15%;
+  left: 40%;
   transform: translate(-50%, -50%);
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 28px;
   max-width: 355px;
+  max-height: 500px;
   text-align: left;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
+  overflow: auto;
+
 }
 
 
