--- a/src/MyPlanets.css
+++ b/src/MyPlanets.css
@@ -80,23 +80,23 @@
 #crawl {
     position: absolute;
     top: 100%;
-    left: 50%;
+    left: 10%;
     width: 80%;
     transform: translateX(-50%) rotateX(25deg);
-    animation: crawl 90s linear;
+    animation: crawl 90s linear forwards;
 }
-
 
 @keyframes crawl {
     0% {
         top: 100%;
-        transform: translateZ(0) rotateX(25deg);
+        transform: rotateX(30deg) translateZ(0);
     }
     100% { 
-        top: -6000px;
-        transform: translateZ(-2500px) 
+        top: -5000px;
+        transform: rotateX(30deg) translateZ(-2500px);
     }
 }
+
 .title, .subtitle {
     text-align: center;
     font-family: 'Pathway Gothic One', sans-serif;
@@ -116,7 +116,7 @@
 
 .text {
     font-family: 'Pathway Gothic One', sans-serif;
-    font-size: 50px;
+    font-size: 90px;
     line-height: 1.5;
     color: #feda4a;
     text-align: justify;
@@ -130,14 +130,7 @@ canvas {
     z-index: 0;
 }
   
-@keyframes crawl-animation {
-    0% {
-        transform: rotateX(20deg) translateY(100%);
-    }
-    100% {
-        transform: rotateX(20deg) translateY(-400%); /* Adjust translateY value if text disappears too quickly/slowly */
-    }
-  }
+
   .title, .subtitle, .text {
     text-align: center;
     font-family: 'Pathway Gothic One', sans-serif;
